# perfect-template

./: Cargo.toml
src/: lib.rs
