[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_cast = "1.0.1"
wasm-bindgen = "0.2.91"
you-can = "0.0.14"
